# discoship

./: README.md  pyproject.toml
art/: discoship.txt
discoship/: cli.py  db.py  defs.py  io.py
discoship/data/: create-config-table.sql  create-discogs-tables.sql  create-ingest-tables.sql  discogs-shipping-destinations.htm  discoship.db  discoship.ddl  init.sql
discoship/discogs/: fetch.py
discoship/usps/: cpg.py  fetch.py  rates.py
